subprojects {
	apply plugin: 'java-library'

	version "1.0.0"

	sourceCompatibility = 15
	targetCompatibility = 15

	java {
		modularity.inferModulePath = true
	}

	tasks.withType(JavaCompile) {
		options.compilerArgs += "--enable-preview"
	}
	tasks.withType(Test) {
		jvmArgs += "--enable-preview"
	}
	tasks.withType(JavaExec) {
		jvmArgs += "--enable-preview"
	}

	afterEvaluate {
		repositories {
			jcenter()
		}
	}
}
